# CI-CD

./: .gitlab-ci.yml  README.md  arithmetic.py  pyproject.toml  test_arithmetic.py
tests/: test_arithmetic.py
