[tool.poetry]
name = "my-arithmetic-tpuser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
tox = "*"
coverage = "*"
pytest = "*"
poetry-dynamic-versioning = "*"

[tool.poetry.group.dev.dependencies]
poetry-dynamic-versioning = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
include-timestamp = true
enable-git-versioning = true
style = "pep440"
